--- a/FamilyDetail.html
+++ b/FamilyDetail.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <header class="header">
-            Registration
+            Registration-II
         </header>
         <!-- personal-info -->
        <form>
@@ -76,7 +76,10 @@
         <br>
         <button type="submit" style="transition:all 0.3s linear;background-color: #4070f4;;cursor:pointer; height: 20px; width:60px;margin-bottom:15px;">
             <a href="http://localhost:5500/register.html">Previous</a>
-        </button>  
+        </button>
+        <button   type="submit" style="background-color: #4070f4;;cursor:pointer; height: 20px; width:60px;margin-bottom:5px;">
+            Submit
+        </button>   
     </div>
     
 </body>
