--- a/register.html
+++ b/register.html
@@ -25,15 +25,15 @@
             <div class="personal-div">
                 <div class="wrap">
                     <label class="label">Full Name</label>
-                    <input type="text" class="input" placeholder="Pankaj">
+                    <input type="text" class="input-Name" placeholder="Pankaj">
                 </div>
                 <div class="wrap">
                     <label class="label">DOB</label>
-                    <input type="date" class="input" placeholder="23/23/23">
+                    <input type="date" class="input-Dob" placeholder="23/23/23">
                 </div>
                 <div class="wrap">
                     <label class="label">Email</label>
-                    <input type="email" class="input" placeholder="pankaj123@gmail.com">
+                    <input type="email" class="input-Email" placeholder="pankaj123@gmail.com">
                 </div>
             </div>
         </section>
@@ -43,27 +43,26 @@
             <div class="personal-div">
                 <div class="wrap">
                     <label class="label">PAN Number</label>
-                    <input type="text" class="input" placeholder="LQBP3123AD">
+                    <input type="text" class="input-Pan" placeholder="LQBP3123AD">
                 </div>
                 <div class="wrap">
                     <label class="label" placeholder="address">Address</label>
-                    <input type="text" class="input" placeholder="Digamber-Chowk, Jorhat">
+                    <input type="text" class="input-Address" placeholder="Digamber-Chowk, Jorhat">
                 </div>
                 <div class="wrap">
                     <label class="label">Back-ground</label>
-                    <input type="email" class="input" placeholder="ST/SC/OBC/GEN">
+                    <input type="email" class="input-Bg" placeholder="ST/SC/OBC/GEN">
                 </div>
             </div>
         </section>
         <br>
-        <button onclick="action()"  type="submit" style="background-color: #4070f4;;cursor:pointer; height: 20px; width:60px;margin-bottom:5px;">
-            <a href="http://localhost:5500/FamilyDetail.html">Next</a>
+        <button onclick="action()"   type="submit" style="background-color: #4070f4;;cursor:pointer; height: 20px; width:60px;margin-bottom:5px;">
+           NEXT
         </button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <button onclick="action()"  type="submit" style="background-color: #4070f4;;cursor:pointer; height: 20px; width:60px;margin-bottom:5px;">
-            Submit
-        </button>   
+       
+        <script src="./register.js"></script>
     </div>
-    <script src="./register.js"></script>
+   
     
 </body>
 </html>
