--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Get-Registered</title>
 
     
 
@@ -15,6 +15,9 @@
 
 </head>
 <body>
+    <div class="progress">
+
+    </div>
     <div id="actionkaro"class="container">
         <header class="header">
             Registration
